--- a/config/default.cfg
+++ b/config/default.cfg
@@ -134,7 +134,7 @@ cfg$gms$fossil <- "grades2poly"        # def = grades2poly
 # ***---------------------    32_power    ----------------------------------------
 # * (IntC)	:	Power sector formulation with Integration Cost (IntC) markups and curtailment for VRE integration - linearly increasing with VRE share -, and fixed capacity factors for dispatchable power plants
 # * (RLDC)	:	Power sector formulation with Residual Load Duration Curve (RLDC) formulation for VRE power integration, and flexible capacity factors for dispatchable power plants
-# * (DTcoup)	:	Power sector formulation with coupling to DIETER
+# * (DTcoup)	:	Power sector formulation with coupling to DIETE
 cfg$gms$power <- "DTcoup"        # def = IntC
 
 # ***---------------------    33_CDR       ----------------------------------------
@@ -259,16 +259,17 @@ cfg$gms$codePerformance <- "off"        # def = off
 #-----------------------------------------------------------------------------
 cfg$gms$cm_iteration_max       <- 1       # def <- 1
 cfg$gms$c_solver_try_max       <- 2       # def <- 2
-cfg$gms$c_keep_iteration_gdxes <- 0       # def <- 0
+cfg$gms$c_keep_iteration_gdxes <- 1       # def <- 0
 cfg$gms$cm_nash_autoconverge   <- 1       # def <- 1
 cfg$gms$cm_MAgPIE_coupling     <- "off"   # def <- "off"
 
-cfg$gms$cm_emiscen              <- 1     # def <- 1
+cfg$gms$cm_emiscen              <- 9     # def <- 1
 cfg$gms$cm_rcp_scen             <- "none"  # def <- "none"
 cfg$gms$cm_iterative_target_adj <- 0     # def <- 0
 cfg$gms$cm_co2_tax_2020         <- -1    # def <- -1
 cfg$gms$cm_co2_tax_growth       <- 1.05  # def <- 1.05
 cfg$gms$c_macscen               <- 1     # def <- 1
+cfg$gms$cm_DTcoup               <- "on"		 # def <- "off"
 
 cfg$gms$cm_nucscen             <-  2  #  def  <-  2
 cfg$gms$cm_ccapturescen        <-  1  #  def  <-  1
@@ -491,25 +492,37 @@ cfg$files2export$start <- c("config/conopt3.opt",
                             "core/input/historical/historical.mif",
                             "scripts/input/exoGAINSAirpollutants.R",
                             "scripts/iterative/EDGE_transport.R",
-														"scripts/iterative/DIETER/DIETER_v1.0.2.gms",
-														"scripts/iterative/DIETER/dataload.gms",
-														"scripts/iterative/DIETER/fix.gms",
-														"scripts/iterative/DIETER/Scenario.gms",
-														"scripts/iterative/DIETER/AC_demand.csv",
-														"scripts/iterative/DIETER/DSM_curt.csv",
-														"scripts/iterative/DIETER/FuelPrice.csv",
-														"scripts/iterative/DIETER/Load.csv",
-														"scripts/iterative/DIETER/Renewables.csv",
-														"scripts/iterative/DIETER/Time_Data.csv",
-														"scripts/iterative/DIETER/Conventionals.csv",
-														"scripts/iterative/DIETER/DSM_shift.csv",														
-														"scripts/iterative/DIETER/Load_copy.csv",
-														"scripts/iterative/DIETER/phi_AC.csv",
-														"scripts/iterative/DIETER/Storage.csv",
-														"scripts/iterative/DIETER/VRE_potential.csv",
-														"scripts/iterative/DIETER/Reserves.csv",
-														"scripts/iterative/DIETER/Reserves2.csv",
-														"scripts/iterative/DIETER/Reserves_hourly.csv",
+				"scripts/iterative/DIETER/mergegdx.gms",
+				"scripts/iterative/DIETER/DIETER_v1.0.2_1.gms",
+				"scripts/iterative/DIETER/DIETER_v1.0.2_2.gms",
+				"scripts/iterative/DIETER/DIETER_v1.0.2_3.gms",
+				"scripts/iterative/DIETER/DIETER_v1.0.2_4.gms",
+				"scripts/iterative/DIETER/DIETER_v1.0.2_5.gms",
+				"scripts/iterative/DIETER/DIETER_v1.0.2_6.gms",
+				"scripts/iterative/DIETER/DIETER_v1.0.2_7.gms",
+				"scripts/iterative/DIETER/DIETER_v1.0.2_8.gms",
+				"scripts/iterative/DIETER/DIETER_v1.0.2_9.gms",
+				"scripts/iterative/DIETER/DIETER_v1.0.2_10.gms",
+				"scripts/iterative/DIETER/DIETER_v1.0.2_11.gms",
+				"scripts/iterative/DIETER/DIETER_v1.0.2_12.gms",
+				"scripts/iterative/DIETER/DIETER_v1.0.2_13.gms",
+				"scripts/iterative/DIETER/DIETER_v1.0.2_14.gms",
+				"scripts/iterative/DIETER/DIETER_v1.0.2_15.gms",
+				"scripts/iterative/DIETER/dataload.gms",
+				"scripts/iterative/DIETER/DIETER_parallel.sh",
+				"scripts/iterative/DIETER/Scenario.gms",
+				"scripts/iterative/DIETER/reporting.gms",
+				"scripts/iterative/DIETER/DSM_curt.csv",
+				"scripts/iterative/DIETER/FuelPrice.csv",
+				"scripts/iterative/DIETER/Load_DEU.csv",
+				"scripts/iterative/DIETER/Renewables.csv",
+				"scripts/iterative/DIETER/Conventionals.csv",
+				"scripts/iterative/DIETER/DSM_shift.csv",														
+				"scripts/iterative/DIETER/Storage.csv",
+				"scripts/iterative/DIETER/VRE_potential_DEU.csv",
+				"scripts/iterative/DIETER/Reserves.csv",
+				"scripts/iterative/DIETER/Reserves2.csv",
+				"scripts/iterative/DIETER/Reserves_hourly.csv",
                             "config/input.gdx",
                             "config/input_ref.gdx",
                             "core/magicc",
@@ -573,6 +586,9 @@ cfg$RunsUsingTHISgdxAsBAU <- NA
 # c_macscen       "use of mac"
 #  (1): on
 #  (2): off
+# cm_DTcoup       "coupled with DIETER option
+#  (0): off
+#  (1): on
 # cm_nucscen       "nuclear option choice"
 #  (1): no fnrs, tnrs completely free after 2020
 #  (2): no fnrs, tnrs with restricted new builds until 2030 (based on current data on plants under construction, planned or proposed)
