--- a/config/default.cfg
+++ b/config/default.cfg
@@ -786,11 +786,20 @@ cfg$RunsUsingTHISgdxAsBAU <- NA
 # specify regions to which nucscen, capturescen should apply to (e.g. c_regi_nucscen <- "JPN,USA")
 # c_regi_nucscen
 # c_regi_capturescen
+
+cfg$gms$cm_flex_tax <- 0 # def 0
+
 # cfg$gms$cm_EDGEtr_scen  "the EDGE-T scenario"
 # ("Conservative_liquids") very conservative scenario with high reliance on fossil fuels in the transport sector
 # ("Electricity_push") vehicles with electric drivetrains get some initial push on shares and preferences, leads to ~70% takeover by 2050
 # ("Hydrogen_push") similar to the "Electricity_push" scenario, but FCEV penetration is much less as FCEVs remain rather expensive.
 # ("Smart_lifestyles_Electricity_push") similar to "Electricity_push" but with reduced overall demand and increased acceptance of small cars, busses and trains.
+
+# cm_flex_tax "switch for flexibility tax/subsidy, switching it on activates a tax on a number of technologies with flexible or inflexible electricity input."
+# technologies with flexible eletricity input get a subsidy corresponding to the lower-than-average electricity prices that they see, while 
+# inflexible technologies get a tax corresponding to the higher-than-average electricity prices that they see
+# (0) flexibility tax off 
+# (1) flexibility tax on
 ##-------------------- flags --------------------------------------------------
 # cm_SlowConvergence  off       !! def = off
 #*RP* Turn on a slower convergence scheme where each conopt file is used twice, thus conopt1 is used for itr 1+2, conopt.op2 for itr 3+4, conopt.op3 for itr 5+6, conopt.op4 for itr 7+8, conopt.op5 from itr 9 on.
