--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,9 @@
 ignore DEITER tables
 dataprocessing/DIETER_plots/*.csv
 dataprocessing/*.csv
+dataprocessing/*.xls
+dataprocessing/*.xls#
+dataprocessing/*.csv#
 
 # Ignore everything in "input" folders
 input/
@@ -34,3 +37,4 @@ main.lst
 
 # Ignore .RData files only in the root folder
 /*.RData
+
