--- a/config/default.cfg
+++ b/config/default.cfg
@@ -549,7 +549,7 @@ cfg$files2export$start <- c("config/conopt3.opt",
                             "core/input/historical/historical.mif",
                             "scripts/input/exoGAINSAirpollutants.R",
                             "scripts/iterative/EDGE_transport.R",
-				"scripts/iterative/DIETER/mergegdx.gms",
+				"scripts/iterative/DIETER/mergegdx.sh",
 				"scripts/iterative/DIETER/DIETER_v1.0.2_1.gms",
 				"scripts/iterative/DIETER/DIETER_v1.0.2_2.gms",
 				"scripts/iterative/DIETER/DIETER_v1.0.2_3.gms",
