push before pulling new config table

--- a/config/default.cfg
+++ b/config/default.cfg
@@ -569,6 +569,9 @@ cfg$files2export$start <- c("config/conopt3.opt",
 				"scripts/iterative/DIETER/DIETER_v1.0.2_13.gms",
 				"scripts/iterative/DIETER/DIETER_v1.0.2_14.gms",
 				"scripts/iterative/DIETER/DIETER_v1.0.2_15.gms",
+				"scripts/iterative/DIETER/DIETER_v1.0.2_16.gms",
+				"scripts/iterative/DIETER/DIETER_v1.0.2_17.gms",
+				"scripts/iterative/DIETER/DIETER_v1.0.2_18.gms",
 				"scripts/iterative/DIETER/dataload.gms",
 				"scripts/iterative/DIETER/DIETER_parallel.sh",
 				"scripts/iterative/DIETER/Scenario.gms",
