--- a/config/default.cfg
+++ b/config/default.cfg
@@ -28,7 +28,7 @@ cfg$revision <- 6.1516
 cfg$CESandGDXversion <- "5612115a677edc605614bdbc0cc36fb10d6be2c4"
 
 #### Force the model to download new input data ####
-cfg$force_download <- FALSE
+cfg$force_download <- TRUE
 
 # Should an existing output folder be replaced if a new run with the same name is started?
 cfg$force_replace <- FALSE
