--- a/config/default.cfg
+++ b/config/default.cfg
@@ -628,6 +628,9 @@ cfg$files2export$start <- c("config/conopt3.opt",
 				"scripts/iterative/DIETER/Reserves.csv",
 				"scripts/iterative/DIETER/Reserves2.csv",
 				"scripts/iterative/DIETER/Reserves_hourly.csv",
+                                "scripts/iterative/DIETER/VRE_potential_USA_renewNinja.csv",
+                                "scripts/iterative/DIETER/Load_USA_2019.csv",
+
                             "config/input.gdx",
                             "config/input_ref.gdx",
                             "core/magicc",
