--- a/config/default.cfg
+++ b/config/default.cfg
@@ -630,6 +630,7 @@ cfg$files2export$start <- c("config/conopt3.opt",
 				"scripts/iterative/DIETER/Reserves_hourly.csv",
                                 "scripts/iterative/DIETER/VRE_potential_USA_renewNinja.csv",
                                 "scripts/iterative/DIETER/Load_USA_2019.csv",
+                                "scripts/iterative/DIETER/input_DIETER.gdx",
 
                             "config/input.gdx",
                             "config/input_ref.gdx",
