turn off soft cap in default

--- a/config/default.cfg
+++ b/config/default.cfg
@@ -283,7 +283,7 @@ cfg$gms$cm_co2_tax_2020           <- -1        # def <- -1
 cfg$gms$cm_co2_tax_growth         <- 1.05      # def <- 1.05
 cfg$gms$c_macscen                 <- 1         # def <- 1
 cfg$gms$cm_DTcoup               	<- "on"		 	 # def <- "off"
-cfg$gms$cm_softcap                      <- "on"
+cfg$gms$cm_softcap                      <- "off"
 cfg$gms$cm_DTcoup_capcon        	<- 0		 		 # def <- 0
 
 cfg$gms$cm_nucscen                  <-  2         #  def  <-  2
