--- a/config/default.cfg
+++ b/config/default.cfg
@@ -284,7 +284,7 @@ cfg$gms$cm_co2_tax_growth         <- 1.05      # def <- 1.05
 cfg$gms$c_macscen                 <- 1         # def <- 1
 cfg$gms$cm_DTcoup               	<- "on"		 	 # def <- "off"
 cfg$gms$cm_softcap                      <- "off"
-cfg$gms$cm_DTcoup_capcon        	<- 0		 		 # def <- 0
+cfg$gms$cm_DTcoup_eq        	<- 0		 		 # def <- 0
 
 cfg$gms$cm_nucscen                  <-  2         #  def  <-  2
 cfg$gms$cm_ccapturescen             <-  1         #  def  <-  1
@@ -1034,7 +1034,7 @@ cfg$gms$c_BaselineAgriEmiRedDEU <- 0
 # 1 (on), default
 # cm_BioSupply_Adjust_EU
 # scales bioenergy supply curves in EU regions (mainly used to match EUR H12/Magpie bioenergy potential)
-# cm_DTcoup_capcon       "capacity constraint from coupling with DIETER"
+# cm_DTcoup_eq      "turn on equations for coupling with DIETER"
 #  (0): off
 #  (1): on
 ############################################################
