--- a/config/default.cfg
+++ b/config/default.cfg
@@ -676,6 +676,7 @@ cfg$files2export$start <- c("config/conopt3.opt",
                             "scripts/iterative/dieter-coupling-remind/DIETER/VRE_potential_USA_renewNinja.csv",
                             "scripts/iterative/dieter-coupling-remind/DIETER/Load_USA_2019.csv",
                             "scripts/iterative/dieter-coupling-remind/DIETER/input_DIETER.gdx",
+			    "scripts/iterative/dieter-coupling-remind/DIETER/P2G.csv",
                             "config/input.gdx",
                             "config/input_ref.gdx",
                             "core/magicc",
