--- a/config/default.cfg
+++ b/config/default.cfg
@@ -688,7 +688,12 @@ cfg$files2export$start <- c("config/conopt3.opt",
                             "scripts/iterative/dieter-coupling-remind/DIETER/Load_USA_2019.csv",
                             "scripts/iterative/dieter-coupling-remind/DIETER/input_DIETER.gdx",
 			    "scripts/iterative/dieter-coupling-remind/DIETER/P2G.csv",
-                            "config/input.gdx",
+			    "modules/32_power/DTcoup/bounds.gms",
+                            "modules/32_power/DTcoup/datainput.gms",
+			    "modules/32_power/DTcoup/equations.gms",
+                            "modules/32_power/DTcoup/postsolve.gms",
+			    "modules/32_power/DTcoup/presolve.gms",
+			    "config/input.gdx",
                             "config/input_ref.gdx",
                             "core/magicc",
                             ".Rprofile",
