adding green H2 coupling switch, fix fuel price bug, change sign in prefactors

--- a/config/default.cfg
+++ b/config/default.cfg
@@ -278,6 +278,7 @@ cfg$gms$c_macscen                 <- 1         # def <- 1
 cfg$gms$cm_DTcoup               	<- "on"		 	 # def <- "off"
 cfg$gms$cm_softcap                      <- "off"
 cfg$gms$cm_DTcoup_eq        	<- 0		 		 # def <- 0
+cfg$gms$cm_elh2_coup            <- "on"
 
 cfg$gms$cm_nucscen                  <-  2         #  def  <-  2
 cfg$gms$cm_ccapturescen             <-  1         #  def  <-  1
@@ -687,6 +688,7 @@ cfg$files2export$start <- c("config/conopt3.opt",
                             "scripts/iterative/dieter-coupling-remind/DIETER/VRE_potential_USA_renewNinja.csv",
                             "scripts/iterative/dieter-coupling-remind/DIETER/Load_USA_2019.csv",
                             "scripts/iterative/dieter-coupling-remind/DIETER/input_DIETER.gdx",
+			    "scripts/iterative/dieter-coupling-remind/DIETER/RMdata_4RM.gdx",
 			    "scripts/iterative/dieter-coupling-remind/DIETER/P2G.csv",
 			    "modules/32_power/DTcoup/bounds.gms",
                             "modules/32_power/DTcoup/datainput.gms",
@@ -1055,6 +1057,7 @@ cfg$gms$c_BaselineAgriEmiRed <- 0
 # cm_DTcoup_eq      "turn on equations for coupling with DIETER"
 #  (0): off
 #  (1): on
+# cm_elh2_coup  off !! def = off     "turn on elh2 coupling with DIETER"
 ############################################################
 # cfg$gms$cm_flex_tax: switch to switch flexibility tax on or off
 # cfg$gms$cm_PriceDurSlope_elh2: slope of price duration curve for electrolysis (increase means more flexibility subsidy for electrolysis H2)
