--- a/config/default.cfg
+++ b/config/default.cfg
@@ -278,7 +278,7 @@ cfg$gms$c_macscen                 <- 1         # def <- 1
 cfg$gms$cm_DTcoup               	<- "on"		 	 # def <- "off"
 cfg$gms$cm_softcap                      <- "off"
 cfg$gms$cm_DTcoup_eq        	<- 0		 		 # def <- 0
-cfg$gms$cm_elh2_coup            <- "on"
+cfg$gms$cm_elh2_coup            <- "off"       #def <- "off"
 
 cfg$gms$cm_nucscen                  <-  2         #  def  <-  2
 cfg$gms$cm_ccapturescen             <-  1         #  def  <-  1
@@ -687,7 +687,6 @@ cfg$files2export$start <- c("config/conopt3.opt",
 														"scripts/iterative/dieter-coupling-remind/DIETER/Reserves_hourly.csv",
                             "scripts/iterative/dieter-coupling-remind/DIETER/VRE_potential_USA_renewNinja.csv",
                             "scripts/iterative/dieter-coupling-remind/DIETER/Load_USA_2019.csv",
-                            "scripts/iterative/dieter-coupling-remind/DIETER/input_DIETER.gdx",
 			    "scripts/iterative/dieter-coupling-remind/DIETER/RMdata_4RM.gdx",
 			    "scripts/iterative/dieter-coupling-remind/DIETER/P2G.csv",
 			    "modules/32_power/DTcoup/bounds.gms",
