allowing dieter to run from input.gdx first before remind run starts. dieter is now called first in preloop in 32_power, then in postsolve; dieter data is read in in presolve

--- a/config/default.cfg
+++ b/config/default.cfg
@@ -278,7 +278,7 @@ cfg$gms$c_macscen                 <- 1         # def <- 1
 cfg$gms$cm_DTcoup               	<- "on"		 	 # def <- "off"
 cfg$gms$cm_softcap                      <- "off"
 cfg$gms$cm_DTcoup_eq        	<- 0		 		 # def <- 0
-cfg$gms$cm_elh2_coup            <- "off"       #def <- "off"
+cfg$gms$cm_elh2_coup            <- "on"       #def <- "off"
 
 cfg$gms$cm_nucscen                  <-  2         #  def  <-  2
 cfg$gms$cm_ccapturescen             <-  1         #  def  <-  1
