new config for master branch

--- a/config/default.cfg
+++ b/config/default.cfg
@@ -25,7 +25,7 @@ cfg$regionmapping <- "config/regionmappingH12.csv"
 cfg$revision <- 6.262
 
 #### Current CES parameter and GDX revision (commit hash) ####
-cfg$CESandGDXversion <- "a83fea78dd81ce2dbfa1aa56b2aa2db97bc00a1c"
+cfg$CESandGDXversion <- "d54206270dcae5bae535fa867e3cddecf87f8f06"
 
 #### Force the model to download new input data ####
 cfg$force_download <- TRUE
@@ -144,7 +144,7 @@ cfg$gms$fossil <- "grades2poly"        # def = grades2poly
 # * (IntC)	:	Power sector formulation with Integration Cost (IntC) markups and curtailment for VRE integration - linearly increasing with VRE share -, and fixed capacity factors for dispatchable power plants
 # * (RLDC)	:	Power sector formulation with Residual Load Duration Curve (RLDC) formulation for VRE power integration, and flexible capacity factors for dispatchable power plants
 # * (DTcoup)	:	Power sector formulation with coupling to DIETER
-cfg$gms$power <- "DTcoup"        # def = IntC
+cfg$gms$power <- "IntC"        # def = IntC
 
 # ***---------------------    33_CDR       ----------------------------------------
 # * (off)        : no carbon dioxide removal technologies except BECCS
@@ -156,7 +156,7 @@ cfg$gms$CDR <- "DAC"        # def = DAC
 # ***---------------------    35_transport    ----------------------------------------
 # * (complex):  transport realization including electricity in the transport sector (*RP*)
 # * (edge_esm): transport realization with detailed modes/vehicles representation (*AD*, *MR*)																							  
-cfg$gms$transport <- "edge_esm"           # def = edge_esm
+cfg$gms$transport <- "complex"           # def = edge_esm
 
 # ***---------------------    36_buildings    ---------------------------------
 # * (simple): representation of the demand in terms of energy carriers
@@ -167,7 +167,7 @@ cfg$gms$buildings  <- "simple"      # def = simple
 # ***---------------------    37_industry    ----------------------------------
 # * (fixed_shares): fixed shares of industry sub-sectors (cement, chemicals,
 #                   steel, other) in industry FE use
-cfg$gms$industry  <- "subsectors"   # def = subsectors
+cfg$gms$industry  <- "fixed_shares"   # def = subsectors
 
 # ***---------------------    39_CCU    ---------------------------------
 # * (on): simple representation of carbon capture and utilization technologies, first only example of syngas (H22CH4)
@@ -276,10 +276,10 @@ cfg$gms$cm_NDC_version            <- "2021_cond"    # def <- "2021_cond", or "20
 cfg$gms$cm_co2_tax_2020           <- -1             # def <- -1
 cfg$gms$cm_co2_tax_growth         <- 1.05           # def <- 1.05
 cfg$gms$c_macscen                 <- 1              # def <- 1
-cfg$gms$cm_DTcoup                       <- "on"                  # def <- "off"
+cfg$gms$cm_DTcoup                       <- "off"                  # def <- "off"
 cfg$gms$cm_softcap                      <- "off"
 cfg$gms$cm_DTcoup_eq            <- 0                             # def <- 0
-cfg$gms$cm_elh2_coup            <- "on"       #def <- "off"
+cfg$gms$cm_elh2_coup            <- "off"       #def <- "off"
 
 cfg$gms$cm_nucscen                  <-  2         #  def  <-  2
 cfg$gms$cm_ccapturescen             <-  1         #  def  <-  1
