turn on DTcoup and flex_tax as default

--- a/config/default.cfg
+++ b/config/default.cfg
@@ -276,7 +276,7 @@ cfg$gms$cm_NDC_version            <- "2021_cond"    # def <- "2021_cond", or "20
 cfg$gms$cm_co2_tax_2020           <- -1             # def <- -1
 cfg$gms$cm_co2_tax_growth         <- 1.05           # def <- 1.05
 cfg$gms$c_macscen                 <- 1              # def <- 1
-cfg$gms$cm_DTcoup                       <- "off"                  # def <- "off"
+cfg$gms$cm_DTcoup                       <- "on"                  # def <- "off"
 cfg$gms$cm_softcap                      <- "off"
 cfg$gms$cm_DTcoup_eq            <- 0                             # def <- 0
 cfg$gms$cm_elh2_coup            <- "off"       #def <- "off"
@@ -403,7 +403,7 @@ cfg$gms$c_regi_nucscen <- "all" # def <- "all"
 cfg$gms$c_regi_capturescen <- "all" # def <- "all"
 cfg$gms$c_regi_sensscen <- "all" # def <- "all"
 
-cfg$gms$cm_flex_tax <- 0 # def 0
+cfg$gms$cm_flex_tax <- 1 # def 0
 
 cfg$gms$cm_TaxConvCheck <- 0 # def <- 0, tax convergence check off 
 
