--- a/config/default.cfg
+++ b/config/default.cfg
@@ -280,6 +280,7 @@ cfg$gms$cm_DTcoup                       <- "on"                  # def <- "off"
 cfg$gms$cm_softcap                      <- "off"
 cfg$gms$cm_DTcoup_eq            <- 0                             # def <- 0
 cfg$gms$cm_elh2_coup            <- "off"       #def <- "off"
+cfg$gms$cm_CHP_coup             <- "off"      #def <- "on"
 
 cfg$gms$cm_nucscen                  <-  2         #  def  <-  2
 cfg$gms$cm_ccapturescen             <-  1         #  def  <-  1
@@ -1045,6 +1046,7 @@ cfg$gms$c_BaselineAgriEmiRed <- 0
 #  (0): off
 #  (1): on
 # cm_elh2_coup  off !! def = off     "turn on elh2 coupling with DIETER"
+# cm_CHP_coup   on !! def = on	     "turn on CHP coupling with DIETER"
 ############################################################
 # cfg$gms$cm_flex_tax: switch to switch flexibility tax on or off
 # cfg$gms$cm_PriceDurSlope_elh2: slope of price duration curve for electrolysis (increase means more flexibility subsidy for electrolysis H2)
