--- a/config/default.cfg
+++ b/config/default.cfg
@@ -279,7 +279,7 @@ cfg$gms$c_macscen                 <- 1              # def <- 1
 cfg$gms$cm_DTcoup                       <- "on"                  # def <- "off"
 cfg$gms$cm_softcap                      <- "off"
 cfg$gms$cm_DTcoup_eq            <- 0                             # def <- 0
-cfg$gms$cm_elh2_coup            <- "off"       #def <- "off"
+cfg$gms$cm_elh2_coup            <- "on"       #def <- "off"
 cfg$gms$cm_CHP_coup             <- "off"      #def <- "on"
 
 cfg$gms$cm_nucscen                  <-  2         #  def  <-  2
@@ -308,9 +308,9 @@ cfg$gms$cm_1stgen_phaseout      <- 0         # def <- 0
 cfg$gms$cm_tradbio_phaseout   <-  "default" #def  <-  "default"
 cfg$gms$cm_cprice_red_factor    <- 1         # def <- 1
 
-cfg$gms$cm_POPscen            <- "pop_SSP2EU"     # def <- "pop_SSP2EU"
-cfg$gms$cm_GDPscen            <- "gdp_SSP2EU"     # def <- "gdp_SSP2EU"
-cfg$gms$cm_demScen            <- "gdp_SSP2EU"         # def <- "gdp_SSP2EU"
+cfg$gms$cm_POPscen            <- "pop_SSP2"     # def <- "pop_SSP2EU"
+cfg$gms$cm_GDPscen            <- "gdp_SSP2"     # def <- "gdp_SSP2EU"
+cfg$gms$cm_demScen            <- "gdp_SSP2"         # def <- "gdp_SSP2EU"
 cfg$gms$cm_GDPcovid           <- 0       # def <- 0
 
 cfg$gms$cm_startyear          <- 2005    # def <- 2005 for BAU, 2015 for policy run
