switch off elh2 in remind

--- a/config/default.cfg
+++ b/config/default.cfg
@@ -279,7 +279,7 @@ cfg$gms$c_macscen                 <- 1              # def <- 1
 cfg$gms$cm_DTcoup                       <- "on"                  # def <- "off"
 cfg$gms$cm_softcap                      <- "off"
 cfg$gms$cm_DTcoup_eq            <- 0                             # def <- 0
-cfg$gms$cm_elh2_coup            <- "on"       #def <- "off"
+cfg$gms$cm_elh2_coup            <- "off"       #def <- "off"
 cfg$gms$cm_CHP_coup             <- "off"      #def <- "on"
 
 cfg$gms$cm_nucscen                  <-  2         #  def  <-  2
