add averaging switches for demand and curt_ratio

--- a/config/default.cfg
+++ b/config/default.cfg
@@ -280,7 +280,9 @@ cfg$gms$cm_DTcoup                       <- "on"                  # def <- "off"
 cfg$gms$cm_softcap                      <- "off"
 cfg$gms$cm_DTcoup_eq            <- 0                             # def <- 0
 cfg$gms$cm_elh2_coup            <- "off"       #def <- "off"
-cfg$gms$cm_CHP_coup             <- "off"      #def <- "on"
+cfg$gms$cm_CHP_coup             <- "off"      #def <- "off"
+cfg$gms$cm_DTcurt_avg             <- "on"       #def <- "on"
+cfg$gms$cm_DTdem_avg              <- "on"       #def <- "on"
 
 cfg$gms$cm_nucscen                  <-  2         #  def  <-  2
 cfg$gms$cm_ccapturescen             <-  1         #  def  <-  1
@@ -1031,6 +1033,9 @@ cfg$gms$c_BaselineAgriEmiRed <- 0
 #  (1): on
 # cm_elh2_coup  off !! def = off     "turn on elh2 coupling with DIETER"
 # cm_CHP_coup   on !! def = on	     "turn on CHP coupling with DIETER"
+# cm_DTcurt_avg             <- "on"       #def <- "on"  turn on averaging of the VRE curtailment ratio received from DIETER
+# cm_DTdem_avg              <- "on"       #def <- "on"  turn on averaging of total and flexible demand transferred to DIETER
+
 ############################################################
 # cfg$gms$cm_flex_tax: switch to switch flexibility tax on or off
 # cfg$gms$cm_PriceDurSlope_elh2: slope of price duration curve for electrolysis (increase means more flexibility subsidy for electrolysis H2)
