export solver status from dieter to remind, halt run when LP is infes

--- a/config/default.cfg
+++ b/config/default.cfg
@@ -672,6 +672,7 @@ cfg$files2export$start <- c("config/conopt3.opt",
                         "scripts/iterative/dieter-coupling-remind/DIETER/Load_USA_2019.csv",
 			"scripts/iterative/dieter-coupling-remind/DIETER/P2G.csv",
                         "scripts/iterative/dieter-coupling-remind/DIETER/fuelPriceCubRegr.R",
+			"scripts/iterative/dieter-coupling-remind/DIETER/Storage_new.csv",
 			"modules/32_power/DTcoup/bounds.gms",
                         "modules/32_power/DTcoup/datainput.gms",
 			"modules/32_power/DTcoup/equations.gms",
