--- a/config/default.cfg
+++ b/config/default.cfg
@@ -283,6 +283,7 @@ cfg$gms$cm_elh2_coup            <- "off"       #def <- "off"
 cfg$gms$cm_CHP_coup             <- "off"      #def <- "off"
 cfg$gms$cm_DTcurt_avg             <- "on"       #def <- "on"
 cfg$gms$cm_DTdem_avg              <- "on"       #def <- "on"
+cfg$gms$cm_DTcoup_flatco2         <- 25		#def <- 25 flat CO2 price for testing dieter coupling
 
 cfg$gms$cm_nucscen                  <-  2         #  def  <-  2
 cfg$gms$cm_ccapturescen             <-  1         #  def  <-  1
@@ -1044,7 +1045,7 @@ cfg$gms$c_BaselineAgriEmiRed <- 0
 # cm_CHP_coup   on !! def = on	     "turn on CHP coupling with DIETER"
 # cm_DTcurt_avg             <- "on"       #def <- "on"  turn on averaging of the VRE curtailment ratio received from DIETER
 # cm_DTdem_avg              <- "on"       #def <- "on"  turn on averaging of total and flexible demand transferred to DIETER
-
+# cm_DTcoup_flatco2         <- 25         #def <- 25 flat CO2 price for testing dieter coupling
 ############################################################
 # cfg$gms$cm_flex_tax: switch to switch flexibility tax on or off
 # cfg$gms$cm_PriceDurSlope_elh2: slope of price duration curve for electrolysis (increase means more flexibility subsidy for electrolysis H2)
