add DTcoup mode: validation and dispatch; comments on exported RM->DT variables and parameters

--- a/config/default.cfg
+++ b/config/default.cfg
@@ -277,6 +277,9 @@ cfg$gms$cm_co2_tax_2020           <- -1             # def <- -1
 cfg$gms$cm_co2_tax_growth         <- 1.05           # def <- 1.05
 cfg$gms$c_macscen                 <- 1              # def <- 1
 cfg$gms$cm_DTcoup                       <- "on"                  # def <- "off"
+cfg$gms$cm_DTmode                       <- "dispatch"          # def <- "validation" 
+cfg$gms$cm_DT_dispatch_i1            <- 20           # def <- 20
+cfg$gms$cm_DT_dispatch_i2            <- 25           # def <- 25
 cfg$gms$cm_softcap                      <- "off"
 cfg$gms$cm_DTcoup_eq            <- 0                             # def <- 0
 cfg$gms$cm_elh2_coup            <- "off"       #def <- "off"
@@ -761,8 +764,11 @@ cfg$gms$c_BaselineAgriEmiRed <- 0
 #  (1): on
 #  (2): off
 # cm_DTcoup       "coupled with DIETER"
-#  (0): off
-#  (1): on
+#  off
+#  on
+# cm_DTmode       "whether DIETER coupling runs in validation mode or dispatch mode" 
+#  validation: DIETER takes preinvestment postdivestment capacities from REMIND as lower bound
+#  dispatch: after a few iterations in "validation" mode, DIETER tries to take postinvestment capacities from REMIND and fix its investment capacities to them
 # cm_nucscen       "nuclear option choice"
 #  (1): no fnrs, tnrs completely free after 2020
 #  (2): no fnrs, tnrs with restricted new builds until 2030 (based on current data on plants under construction, planned or proposed)
@@ -1041,6 +1047,8 @@ cfg$gms$c_BaselineAgriEmiRed <- 0
 # cm_DTcoup_eq      "turn on equations for coupling with DIETER"
 #  (0): off
 #  (1): on
+# cm_DT_dispatch_i1 20 !! def = 20   "the iteration when DIETER validation mode is turned off and dispatch 1 mode (fix VRE capacity) is switched on; only works under DTcoup_mode = dispatch"
+# cm_DT_dispatch_i2 25 !! def = 25   "the iteration when DIETER dispatch 1 mode is turned off and dispatch 2 mode (fix call capacities) is switched on; only works under DTcoup_mode = dispatch"
 # cm_elh2_coup  off !! def = off     "turn on elh2 coupling with DIETER"
 # cm_CHP_coup   on !! def = on	     "turn on CHP coupling with DIETER"
 # cm_DTcurt_avg             <- "on"       #def <- "on"  turn on averaging of the VRE curtailment ratio received from DIETER
