switch on validation and dem_avg=off as default

--- a/config/default.cfg
+++ b/config/default.cfg
@@ -277,7 +277,7 @@ cfg$gms$cm_co2_tax_2020           <- -1             # def <- -1
 cfg$gms$cm_co2_tax_growth         <- 1.05           # def <- 1.05
 cfg$gms$c_macscen                 <- 1              # def <- 1
 cfg$gms$cm_DTcoup                       <- "on"                  # def <- "off"
-cfg$gms$cm_DTmode                       <- "dispatch"          # def <- "validation" 
+cfg$gms$cm_DTmode                       <- "validation"          # def <- "validation" 
 cfg$gms$cm_DT_dispatch_i1            <- 20           # def <- 20
 cfg$gms$cm_DT_dispatch_i2            <- 25           # def <- 25
 cfg$gms$cm_softcap                      <- "off"
@@ -285,7 +285,7 @@ cfg$gms$cm_DTcoup_eq            <- 0                             # def <- 0
 cfg$gms$cm_elh2_coup            <- "off"       #def <- "off"
 cfg$gms$cm_CHP_coup             <- "off"      #def <- "off"
 cfg$gms$cm_DTcurt_avg             <- "on"       #def <- "on"
-cfg$gms$cm_DTdem_avg              <- "on"       #def <- "on"
+cfg$gms$cm_DTdem_avg              <- "off"       #def <- "off"
 cfg$gms$cm_DTcoup_flatco2         <- 25		#def <- 25 flat CO2 price for testing dieter coupling
 
 cfg$gms$cm_nucscen                  <-  2         #  def  <-  2
