add switch for averaging CFs

--- a/config/default.cfg
+++ b/config/default.cfg
@@ -284,6 +284,7 @@ cfg$gms$cm_softcap                      <- "off"
 cfg$gms$cm_DTcoup_eq            <- 0                             # def <- 0
 cfg$gms$cm_elh2_coup            <- "off"       #def <- "off"
 cfg$gms$cm_CHP_coup             <- "off"      #def <- "off"
+cfg$gms$cm_DTcf_avg             <- "on"       #def <- "on"
 cfg$gms$cm_DTcurt_avg             <- "on"       #def <- "on"
 cfg$gms$cm_DTdem_avg              <- "off"       #def <- "off"
 cfg$gms$cm_DTcoup_flatco2         <- 25		#def <- 25 flat CO2 price for testing dieter coupling
@@ -1051,9 +1052,10 @@ cfg$gms$c_BaselineAgriEmiRed <- 0
 # cm_DT_dispatch_i2 25 !! def = 25   "the iteration when DIETER dispatch 1 mode is turned off and dispatch 2 mode (fix call capacities) is switched on; only works under DTcoup_mode = dispatch"
 # cm_elh2_coup  off !! def = off     "turn on elh2 coupling with DIETER"
 # cm_CHP_coup   on !! def = on	     "turn on CHP coupling with DIETER"
-# cm_DTcurt_avg             <- "on"       #def <- "on"  turn on averaging of the VRE curtailment ratio received from DIETER
-# cm_DTdem_avg              <- "on"       #def <- "on"  turn on averaging of total and flexible demand transferred to DIETER
-# cm_DTcoup_flatco2         <- 25         #def <- 25 flat CO2 price for testing dieter coupling
+# cm_DTcf_avg             <- "on"       def <- "on"  turn on averaging of the capacity factors received from DIETER
+# cm_DTcurt_avg             <- "on"       def <- "on"  turn on averaging of the VRE curtailment ratio received from DIETER
+# cm_DTdem_avg              <- "on"       def <- "on"  turn on averaging of total and flexible demand transferred to DIETER
+# cm_DTcoup_flatco2         <- 25         def <- 25 flat CO2 price for testing dieter coupling
 ############################################################
 # cfg$gms$cm_flex_tax: switch to switch flexibility tax on or off
 # cfg$gms$cm_PriceDurSlope_elh2: slope of price duration curve for electrolysis (increase means more flexibility subsidy for electrolysis H2)
