add and export dieter coupling mode switch to choose between validation and dispatch mode; adjust capacity constraint switch, such that it includes none, which means no constraint is applied, it all relies on markups; add a value-factor dependent markup prefactor to stabilize OCGT and solar shares, prevent blowup

--- a/config/default.cfg
+++ b/config/default.cfg
@@ -277,17 +277,17 @@ cfg$gms$cm_co2_tax_2020           <- -1             # def <- -1
 cfg$gms$cm_co2_tax_growth         <- 1.05           # def <- 1.05
 cfg$gms$c_macscen                 <- 1              # def <- 1
 cfg$gms$cm_DTcoup                       <- "on"                  # def <- "off"
-cfg$gms$cm_DTmode                       <- "validation"          # def <- "validation" 
+cfg$gms$cm_DTmode                       <- "validation"          # def <- "validation", "dispatch"
 cfg$gms$cm_DT_dispatch_i1            <- 20           # def <- 20
 cfg$gms$cm_DT_dispatch_i2            <- 25           # def <- 25
-cfg$gms$cm_softcap                      <- "off"
+cfg$gms$cm_DTcapcon                  <- "none"        # def <- "none", "soft", "hard"
 cfg$gms$cm_DTcoup_eq            <- 0                             # def <- 0
 cfg$gms$cm_elh2_coup            <- "off"       #def <- "off"
 cfg$gms$cm_CHP_coup             <- "off"      #def <- "off"
 cfg$gms$cm_DTcf_avg             <- "on"       #def <- "on"
 cfg$gms$cm_DTcurt_avg             <- "on"       #def <- "on"
 cfg$gms$cm_DTdem_avg              <- "off"       #def <- "off"
-cfg$gms$cm_DTcoup_flatco2         <- 25		#def <- 25 flat CO2 price for testing dieter coupling
+cfg$gms$cm_DTcoup_flatco2         <- 25		#def <- 25
 
 cfg$gms$cm_nucscen                  <-  2         #  def  <-  2
 cfg$gms$cm_ccapturescen             <-  1         #  def  <-  1
@@ -1052,6 +1052,10 @@ cfg$gms$c_BaselineAgriEmiRed <- 0
 # cm_DT_dispatch_i2 25 !! def = 25   "the iteration when DIETER dispatch 1 mode is turned off and dispatch 2 mode (fix call capacities) is switched on; only works under DTcoup_mode = dispatch"
 # cm_elh2_coup  off !! def = off     "turn on elh2 coupling with DIETER"
 # cm_CHP_coup   on !! def = on	     "turn on CHP coupling with DIETER"
+# cm_DTcapcon   
+# none: no excplicit capacity constraint from DIETER; only markup coupled 
+# hard: explicit hard capacity constraint from DIETER
+# soft: explicit soft capacity constraint from DIETER
 # cm_DTcf_avg             <- "on"       def <- "on"  turn on averaging of the capacity factors received from DIETER
 # cm_DTcurt_avg             <- "on"       def <- "on"  turn on averaging of the VRE curtailment ratio received from DIETER
 # cm_DTdem_avg              <- "on"       def <- "on"  turn on averaging of total and flexible demand transferred to DIETER
