update DTmode in config

--- a/config/default.cfg
+++ b/config/default.cfg
@@ -277,7 +277,7 @@ cfg$gms$cm_co2_tax_2020           <- -1             # def <- -1
 cfg$gms$cm_co2_tax_growth         <- 1.05           # def <- 1.05
 cfg$gms$c_macscen                 <- 1              # def <- 1
 cfg$gms$cm_DTcoup                       <- "on"                  # def <- "off"
-cfg$gms$cm_DTmode                       <- "validation"          # def <- "validation", "dispatch"
+cfg$gms$cm_DTmode                       <- "validation"          # def <- "validation", "dispatch", "none"
 cfg$gms$cm_DT_dispatch_i1            <- 20           # def <- 20
 cfg$gms$cm_DT_dispatch_i2            <- 25           # def <- 25
 cfg$gms$cm_DTcapcon                  <- "none"        # def <- "none", "soft", "hard"
@@ -767,9 +767,6 @@ cfg$gms$c_BaselineAgriEmiRed <- 0
 # cm_DTcoup       "coupled with DIETER"
 #  off
 #  on
-# cm_DTmode       "whether DIETER coupling runs in validation mode or dispatch mode" 
-#  validation: DIETER takes preinvestment postdivestment capacities from REMIND as lower bound
-#  dispatch: after a few iterations in "validation" mode, DIETER tries to take postinvestment capacities from REMIND and fix its investment capacities to them
 # cm_nucscen       "nuclear option choice"
 #  (1): no fnrs, tnrs completely free after 2020
 #  (2): no fnrs, tnrs with restricted new builds until 2030 (based on current data on plants under construction, planned or proposed)
@@ -1048,8 +1045,12 @@ cfg$gms$c_BaselineAgriEmiRed <- 0
 # cm_DTcoup_eq      "turn on equations for coupling with DIETER"
 #  (0): off
 #  (1): on
-# cm_DT_dispatch_i1 20 !! def = 20   "the iteration when DIETER validation mode is turned off and dispatch 1 mode (fix VRE capacity) is switched on; only works under DTcoup_mode = dispatch"
-# cm_DT_dispatch_i2 25 !! def = 25   "the iteration when DIETER dispatch 1 mode is turned off and dispatch 2 mode (fix call capacities) is switched on; only works under DTcoup_mode = dispatch"
+# cm_DTmode      "DIETER coupling mode"
+#  validation: DIETER is allowed to endogenously invest based on the pre-investment post-early retired capacities from REMIND
+#  dispatch: DIETER is not allowed to endogenously invest, it takes post-investment, post-early retired capacities from REMIND as fixed capacities
+#  none: DIETER is allowed to endogenously invest, and is not constraint by REMIND's standing capacities
+# cm_DT_dispatch_i1 20 !! def = 20   "the iteration when DIETER validation mode is turned off and dispatch 1 mode (fix VRE capacity) is switched on; only works under cm_DTmode = dispatch"
+# cm_DT_dispatch_i2 25 !! def = 25   "the iteration when DIETER dispatch 1 mode is turned off and dispatch 2 mode (fix call capacities) is switched on; only works under cm_DTmode = dispatch"
 # cm_elh2_coup  off !! def = off     "turn on elh2 coupling with DIETER"
 # cm_CHP_coup   on !! def = on	     "turn on CHP coupling with DIETER"
 # cm_DTcapcon   
