replace pm_ts with pm_dt, and add a fuel cost smoothening switch (for over 3 iteration smoothening)

--- a/config/default.cfg
+++ b/config/default.cfg
@@ -285,11 +285,12 @@ cfg$gms$cm_DTcoup                       <- "on"                  # def <- "off"
 cfg$gms$cm_DTmode                       <- "validation"          # def <- "validation", "dispatch", "none"
 cfg$gms$cm_DT_dispatch_i1            <- 20           # def <- 20
 cfg$gms$cm_DT_dispatch_i2            <- 25           # def <- 25
-cfg$gms$cm_DTcapcon                  <- "none"        # def <- "none", "soft", "hard"
+cfg$gms$cm_DTcapcon                  <- "hard"        # def <- "none", "soft", "hard"
 cfg$gms$cm_DTcoup_eq            <- 0                             # def <- 0
 cfg$gms$cm_elh2_coup            <- "off"       #def <- "off"
 cfg$gms$cm_CHP_coup             <- "off"      #def <- "off"
 cfg$gms$cm_DTcf_avg             <- "on"       #def <- "on"
+cfg$gms$cm_DTfc_avg             <- "off"       #def <- "on"
 cfg$gms$cm_DTcurt_avg             <- "on"       #def <- "on"
 cfg$gms$cm_DTdem_avg              <- "off"       #def <- "off"
 cfg$gms$cm_DTcoup_flatco2         <- 25		#def <- 25
@@ -1074,6 +1075,7 @@ cfg$gms$c_BaselineAgriEmiRed <- 0
 # hard: explicit hard capacity constraint from DIETER
 # soft: explicit soft capacity constraint from DIETER
 # cm_DTcf_avg             <- "on"       def <- "on"  turn on averaging of the capacity factors received from DIETER
+# cm_DTfc_avg             <- "on"       def <- "on"  turn on fuel cost averaging (smoothening) over 3 iterations before passing it on to DIETER
 # cm_DTcurt_avg             <- "on"       def <- "on"  turn on averaging of the VRE curtailment ratio received from DIETER
 # cm_DTdem_avg              <- "on"       def <- "on"  turn on averaging of total and flexible demand transferred to DIETER
 # cm_DTcoup_flatco2         <- 25         def <- 25 flat CO2 price for testing dieter coupling
