--- a/config/default.cfg
+++ b/config/default.cfg
@@ -270,6 +270,7 @@ cfg$gms$codePerformance <- "off"        # def = off
 cfg$gms$cm_iteration_max       <- 1       # def <- 1
 cfg$gms$c_solver_try_max       <- 2       # def <- 2
 cfg$gms$c_keep_iteration_gdxes <- 1       # def <- 0
+cfg$gms$c_keep_DTiteration_gdxes <- 1     # def <- 0
 cfg$gms$cm_nash_autoconverge   <- 1       # def <- 1
 cfg$gms$cm_MAgPIE_coupling     <- "off"   # def <- "off"
 
@@ -290,7 +291,7 @@ cfg$gms$cm_DTcoup_eq            <- 0                             # def <- 0
 cfg$gms$cm_elh2_coup            <- "off"       #def <- "off"
 cfg$gms$cm_CHP_coup             <- "off"      #def <- "off"
 cfg$gms$cm_DTcf_avg             <- "on"       #def <- "on"
-cfg$gms$cm_DTfc_avg             <- "off"       #def <- "on"
+cfg$gms$cm_DTfc_avg             <- "on"       #def <- "on"
 cfg$gms$cm_DTcurt_avg             <- "on"       #def <- "on"
 cfg$gms$cm_DTdem_avg              <- "off"       #def <- "off"
 cfg$gms$cm_DTcoup_flatco2         <- 25		#def <- 25
@@ -396,7 +397,7 @@ cfg$gms$c_CES_calibration_iterations         <-  10       # def <- 10  number of
 cfg$gms$c_CES_calibration_new_structure      <-   0       # def <-  0, switch to 1 if you want to calibrate a CES structure different from input gdx
 cfg$gms$c_CES_calibration_write_prices       <-   0       # def <-  0, switch to 1 if you want to generate price file, you can use this as new p29_cesdata_price.cs4r price input file
 cfg$gms$cm_CES_calibration_default_prices    <-   0.01    # def <-  0.01 lower value if input factors get negative shares (xi), CES prices in the first calibration iteration
-cfg$gms$c_CES_calibration_industry_FE_target <-   1
+cfg$gms$c_CES_calibration_industry_FE_target <-   0
 cfg$gms$cm_calibration_string                <-   "off"   # def <- "off" label for your calibration run to keep calibration files with different setups apart (e.g. with low elasticities, high eleasticies)
 
 cfg$gms$c_testOneRegi_region  <-  "EUR"     #  def  <-  "EUR"
@@ -680,13 +681,8 @@ cfg$files2export$start <- c("config/conopt3.opt",
 			"scripts/iterative/dieter-coupling-remind/DIETER/DIETER_parallel.sh",
 			"scripts/iterative/dieter-coupling-remind/DIETER/reporting.gms",
 			"scripts/iterative/dieter-coupling-remind/DIETER/Load_DEU_2019.csv",
-			"scripts/iterative/dieter-coupling-remind/DIETER/Renewables.csv",
-			"scripts/iterative/dieter-coupling-remind/DIETER/Conventionals.csv",
 			"scripts/iterative/dieter-coupling-remind/DIETER/Storage.csv",
 			"scripts/iterative/dieter-coupling-remind/DIETER/VRE_potential_DEU_2019.csv",
-                        "scripts/iterative/dieter-coupling-remind/DIETER/VRE_potential_USA_renewNinja.csv",
-                        "scripts/iterative/dieter-coupling-remind/DIETER/Load_USA_2019.csv",
-			"scripts/iterative/dieter-coupling-remind/DIETER/P2G.csv",
                         "scripts/iterative/dieter-coupling-remind/DIETER/fuelPriceCubRegr.R",
 			"scripts/iterative/dieter-coupling-remind/DIETER/Storage_new.csv",
 			"modules/32_power/DTcoup/bounds.gms",
@@ -1079,6 +1075,8 @@ cfg$gms$c_BaselineAgriEmiRed <- 0
 # cm_DTcurt_avg             <- "on"       def <- "on"  turn on averaging of the VRE curtailment ratio received from DIETER
 # cm_DTdem_avg              <- "on"       def <- "on"  turn on averaging of total and flexible demand transferred to DIETER
 # cm_DTcoup_flatco2         <- 25         def <- 25 flat CO2 price for testing dieter coupling
+# cfg$gms$c_keep_iteration_gdxes <- 1       # def <- 0  keep iteration gdxes
+# cfg$gms$c_keep_DTiteration_gdxes <- 1     # def <- 0  keep DIETER iteration gdxes
 ############################################################
 # cfg$gms$cm_flex_tax: switch to switch flexibility tax on or off
 # cfg$gms$cm_PriceDurSlope_elh2: slope of price duration curve for electrolysis (increase means more flexibility subsidy for electrolysis H2)
