turn on no early retirement

--- a/config/default.cfg
+++ b/config/default.cfg
@@ -284,6 +284,7 @@ cfg$gms$cm_co2_tax_growth         <- 1.05           # def <- 1.05
 cfg$gms$c_macscen                 <- 1              # def <- 1
 cfg$gms$cm_DTcoup                       <- "on"                  # def <- "off"
 cfg$gms$cm_DTmode                       <- "validation"          # def <- "validation", "dispatch", "none"
+cfg$gms$cm_DTnoER                       <- "on"                  # def <- "off"
 cfg$gms$cm_DT_dispatch_i1            <- 20           # def <- 20
 cfg$gms$cm_DT_dispatch_i2            <- 25           # def <- 25
 cfg$gms$cm_DTcapcon                  <- "hard"        # def <- "none", "soft", "hard"
@@ -1058,6 +1059,7 @@ cfg$gms$c_BaselineAgriEmiRed <- 0
 # cm_DTcoup_eq      "turn on equations for coupling with DIETER"
 #  (0): off
 #  (1): on
+# cm_DTnoER      "whether to turn off early retirement for DIETER validation"
 # cm_DTmode      "DIETER coupling mode"
 #  validation: DIETER is allowed to endogenously invest based on the pre-investment post-early retired capacities from REMIND
 #  dispatch: DIETER is not allowed to endogenously invest, it takes post-investment, post-early retired capacities from REMIND as fixed capacities
