--- a/config/default.cfg
+++ b/config/default.cfg
@@ -662,6 +662,7 @@ cfg$files2export$start <- c("config/conopt3.opt",
                             "scripts/input/exoGAINSAirpollutants.R",
                             "scripts/iterative/EDGE_transport.R",
 			"scripts/iterative/dieter-coupling-remind/DIETER/mergegdx.sh",
+			"scripts/iterative/dieter-coupling-remind/DIETER/DIETER_rewrite.py",
 			"scripts/iterative/dieter-coupling-remind/DIETER/DIETER_v1.0.2_1.gms",
 			"scripts/iterative/dieter-coupling-remind/DIETER/DIETER_v1.0.2_2.gms",
 			"scripts/iterative/dieter-coupling-remind/DIETER/DIETER_v1.0.2_3.gms",
