--- a/config/default.cfg
+++ b/config/default.cfg
@@ -288,6 +288,7 @@ cfg$gms$cm_DTnoER                       <- "on"                  # def <- "off"
 cfg$gms$cm_DT_dispatch_i1            <- 20           # def <- 20
 cfg$gms$cm_DT_dispatch_i2            <- 25           # def <- 25
 cfg$gms$cm_DTcapcon                  <- "hard"        # def <- "none", "soft", "hard"
+cfg$gms$cm_DTmrkup                   <- "on"        # def <- "on"
 cfg$gms$cm_DTcoup_eq            <- 0                             # def <- 0
 cfg$gms$cm_DT_elh2_coup            <- "off"       #def <- "off"
 cfg$gms$cm_DT_CHP_coup             <- "off"      #def <- "off"
@@ -1073,6 +1074,7 @@ cfg$gms$c_BaselineAgriEmiRed <- 0
 # none: no excplicit capacity constraint from DIETER; only markup coupled 
 # hard: explicit hard capacity constraint from DIETER
 # soft: explicit soft capacity constraint from DIETER
+# cm_DTmrkup              <- "on"       def <- "on"  turn on markup coupling for markups from DIETER
 # cm_DTcf_avg             <- "on"       def <- "on"  turn on averaging of the capacity factors received from DIETER
 # cm_DTfc_avg             <- "on"       def <- "on"  turn on fuel cost averaging (smoothening) over 3 iterations before passing it on to DIETER
 # cm_DTcurt_avg             <- "on"       def <- "on"  turn on averaging of the VRE curtailment ratio received from DIETER
