--- a/.gitignore
+++ b/.gitignore
@@ -21,7 +21,8 @@ scripts/iterative/DIETER/
 input/
 
 # Ignore everything in root "output" folder
-output/
+output/*
+!/scripts/output/single/DIETER/
 
 # Ignore xlsx files in config created by remind2::colorScenConf()
 config/scenario_config*_colorful.xlsx
