--- a/config/default.cfg
+++ b/config/default.cfg
@@ -284,12 +284,14 @@ cfg$gms$cm_co2_tax_growth         <- 1.05           # def <- 1.05
 cfg$gms$c_macscen                 <- 1              # def <- 1
 cfg$gms$cm_DTcoup                       <- "on"                  # def <- "off"
 cfg$gms$cm_DTmode                       <- "validation"          # def <- "validation", "dispatch", "none"
-cfg$gms$cm_DTnoER                       <- "on"                  # def <- "off"
+cfg$gms$cm_DTnoER                       <- "off"                  # def <- "off"
 cfg$gms$cm_DT_dispatch_i1            <- 20           # def <- 20
 cfg$gms$cm_DT_dispatch_i2            <- 25           # def <- 25
 cfg$gms$cm_DTcapcon                  <- "hard"        # def <- "none", "soft", "hard"
 cfg$gms$cm_DTmrkup                   <- "on"        # def <- "on"
 cfg$gms$cm_DTcoup_eq            <- 0                             # def <- 0
+cfg$gms$cm_DTcoup_adjCost            <- "off"          # def <- off
+cfg$gms$cm_DTcoup_margVRE            <- "off"          # def <- off
 cfg$gms$cm_DT_elh2_coup            <- "off"       #def <- "off"
 cfg$gms$cm_DT_CHP_coup             <- "off"      #def <- "off"
 cfg$gms$cm_DTcf_avg             <- "on"       #def <- "on"
@@ -1068,6 +1070,8 @@ cfg$gms$c_BaselineAgriEmiRed <- 0
 #  none: DIETER is allowed to endogenously invest, and is not constraint by REMIND's standing capacities
 # cm_DT_dispatch_i1 20 !! def = 20   "the iteration when DIETER validation mode is turned off and dispatch 1 mode (fix VRE capacity) is switched on; only works under cm_DTmode = dispatch"
 # cm_DT_dispatch_i2 25 !! def = 25   "the iteration when DIETER dispatch 1 mode is turned off and dispatch 2 mode (fix call capacities) is switched on; only works under cm_DTmode = dispatch"
+# cm_DTcoup_adjCost    def = off "couple adjustment cost in DIETER"
+# cm_DTcoup_margVRE    def = off "couple VRE marginal cost in DIETER"
 # cm_DT_elh2_coup  off !! def = off     "turn on elh2 coupling with DIETER"
 # cm_DT_CHP_coup   on !! def = on	     "turn on CHP coupling with DIETER"
 # cm_DTcapcon   
