switch on adjcost and marginal VRE cost coupling in default

--- a/config/default.cfg
+++ b/config/default.cfg
@@ -290,8 +290,8 @@ cfg$gms$cm_DT_dispatch_i2            <- 25           # def <- 25
 cfg$gms$cm_DTcapcon                  <- "hard"        # def <- "none", "soft", "hard"
 cfg$gms$cm_DTmrkup                   <- "on"        # def <- "on"
 cfg$gms$cm_DTcoup_eq            <- 0                             # def <- 0
-cfg$gms$cm_DTcoup_adjCost            <- "off"          # def <- off
-cfg$gms$cm_DTcoup_margVRE            <- "off"          # def <- off
+cfg$gms$cm_DTcoup_adjCost            <- "on"          # def <- on
+cfg$gms$cm_DTcoup_margVRE            <- "on"          # def <- on
 cfg$gms$cm_DT_elh2_coup            <- "off"       #def <- "off"
 cfg$gms$cm_DT_CHP_coup             <- "off"      #def <- "off"
 cfg$gms$cm_DTcf_avg             <- "on"       #def <- "on"
