--- a/config/default.cfg
+++ b/config/default.cfg
@@ -299,6 +299,7 @@ cfg$gms$cm_DTfc_avg             <- "on"       #def <- "on"
 cfg$gms$cm_DTcurt_avg             <- "on"       #def <- "on"
 cfg$gms$cm_DTdem_avg              <- "off"       #def <- "off"
 cfg$gms$cm_DTcoup_flatco2         <- 25		#def <- 25
+cfg$gms$cm_DTcoup_sIter           <- 1          #def <- 1
 cfg$gms$cm_CO2TaxSectorMarkup     <- "off"          # def <- "off"
 
 cfg$gms$cm_nucscen                  <-  2         #  def  <-  2
@@ -1085,6 +1086,7 @@ cfg$gms$c_BaselineAgriEmiRed <- 0
 # cm_DTdem_avg              <- "on"       def <- "on"  turn on averaging of total and flexible demand transferred to DIETER
 # cm_DTcoup_flatco2         <- 25         def <- 25 flat CO2 price for testing dieter coupling
 # cfg$gms$c_keep_iteration_gdxes <- 1       # def <- 0  keep iteration gdxes
+# cfg$gms$cm_DTcoup_sIter <- 1      # def <- starting iteration for DIETER coupling
 # cfg$gms$c_keep_DTiteration_gdxes <- 1     # def <- 0  keep DIETER iteration gdxes
 ############################################################
 # cfg$gms$cm_flex_tax: switch to switch flexibility tax on or off
