add dieter storage coupling switch

--- a/config/default.cfg
+++ b/config/default.cfg
@@ -292,6 +292,7 @@ cfg$gms$cm_DTmrkup                   <- "on"        # def <- "on"
 cfg$gms$cm_DTcoup_eq            <- 0                             # def <- 0
 cfg$gms$cm_DTcoup_adjCost            <- "on"          # def <- on
 cfg$gms$cm_DTcoup_margVRE            <- "on"          # def <- on
+cfg$gms$cm_DTstor		     <- "none"     # def <- none,coupled
 cfg$gms$cm_DT_elh2_coup            <- "off"       #def <- "off"
 cfg$gms$cm_DT_CHP_coup             <- "off"      #def <- "off"
 cfg$gms$cm_DTcf_avg             <- "on"       #def <- "on"
@@ -1073,6 +1074,9 @@ cfg$gms$c_BaselineAgriEmiRed <- 0
 # cm_DT_dispatch_i2 25 !! def = 25   "the iteration when DIETER dispatch 1 mode is turned off and dispatch 2 mode (fix call capacities) is switched on; only works under cm_DTmode = dispatch"
 # cm_DTcoup_adjCost    def = off "couple adjustment cost in DIETER"
 # cm_DTcoup_margVRE    def = off "couple VRE marginal cost in DIETER"
+# cm_DTstor           def = none "storage implementation option in DIETER"
+# none: no storage implementation
+# coupled: coupled storage implementation
 # cm_DT_elh2_coup  off !! def = off     "turn on elh2 coupling with DIETER"
 # cm_DT_CHP_coup   on !! def = on	     "turn on CHP coupling with DIETER"
 # cm_DTcapcon   
