--- a/config/default.cfg
+++ b/config/default.cfg
@@ -317,6 +317,7 @@ cfg$gms$cm_DTcurt_avg             <- "on"       #def <- "on"
 cfg$gms$cm_DTdem_avg              <- "off"       #def <- "off"
 cfg$gms$cm_DTcoup_flatco2         <- 25		#def <- 25
 cfg$gms$cm_DTcoup_tol             <- 50         #def <- 50
+cfg$gms$cm_DTcoup_tol_i           <- 50         #def <- 50
 cfg$gms$cm_DTcoup_sIter           <- 1          #def <- 1
 cfg$gms$cm_CO2TaxSectorMarkup     <- "off"          # def <- "off"
 
@@ -1119,10 +1120,13 @@ cfg$gms$c_BaselineAgriEmiRed <- 0
 # cm_DTcurt_avg             <- "on"       def <- "on"  turn on averaging of the VRE curtailment ratio received from DIETER
 # cm_DTdem_avg              <- "on"       def <- "on"  turn on averaging of total and flexible demand transferred to DIETER
 # cm_DTcoup_flatco2         <- 25         def <- 25 flat CO2 price for testing dieter coupling
-# cm_DTcoup_tol             <- 50         def <- 50 DIETER coupled run generation share difference convergence tolerance (percentage). 
+# cm_DTcoup_tol             <- 50         def <- 50 DIETER coupled run generation share difference between coupled model convergence tolerance (percentage). 
 # 4%: for normal basic run (no storage, no flexible demand)
 # 6%: for runs with storage and flexible demand, or with policy
 # 7%: for runs with storage and flexible demand and with policy
+# 50%: essentially no convergence criteria.
+# cm_DTcoup_tol_i           <- 50         def <- 50 DIETER coupled run generation share difference (over iteration) model self-convergence tolerance (percentage) 
+# 1%: for normal coupled run (without too much instability)
 # 50%: essentially no convergence criteria.
 # cfg$gms$c_keep_iteration_gdxes <- 1       # def <- 0  keep iteration gdxes
 # cfg$gms$cm_DTcoup_sIter <- 1      # def <- starting iteration for DIETER coupling
