add linear prefactor to peak demand constraint, as a function of wind onshore share; report peak demand; debug DTstor swith labels

--- a/config/default.cfg
+++ b/config/default.cfg
@@ -318,9 +318,9 @@ cfg$gms$cm_DT_dispatch_i2            <- 25           # def <- 25
 cfg$gms$cm_DTcapcon                  <- "hard"        # def <- "none", "soft", "hard"
 cfg$gms$cm_DTmrkup                   <- "on"        # def <- "on"
 cfg$gms$cm_DTcoup_eq            <- 0                             # def <- 0
-cfg$gms$cm_DTcoup_adjCost            <- "on"          # def <- on
-cfg$gms$cm_DTcoup_margVRE            <- "on"          # def <- on
-cfg$gms$cm_DTstor		     <- "none"     # def <- none,coupled
+cfg$gms$cm_DTcoup_adjCost            <- "on"          # def <- "on"
+cfg$gms$cm_DTcoup_margVRE            <- "on"          # def <- "on"
+cfg$gms$cm_DTstor		     <- "off"     # def <- "off"
 cfg$gms$cm_DT_elh2_coup            <- "off"       #def <- "off"
 cfg$gms$cm_DT_CHP_coup             <- "off"      #def <- "off"
 cfg$gms$cm_DTcf_avg             <- "on"       #def <- "on"
@@ -328,6 +328,7 @@ cfg$gms$cm_DTfc_avg             <- "on"       #def <- "on"
 cfg$gms$cm_DTcurt_avg             <- "on"       #def <- "on"
 cfg$gms$cm_DTdem_avg              <- "off"       #def <- "off"
 cfg$gms$cm_DTcoup_flatco2         <- 25		#def <- 25
+cfg$gms$cm_peakPreFac             <- 1         
 cfg$gms$cm_DTcoup_tol             <- 50         #def <- 50
 cfg$gms$cm_DTcoup_tol_i           <- 50         #def <- 50
 cfg$gms$cm_DTcoup_sIter           <- 1          #def <- 1
