add storage off switch for uncoupled runs; improve reporting graphics

--- a/config/default.cfg
+++ b/config/default.cfg
@@ -332,6 +332,7 @@ cfg$gms$cm_peakPreFac             <- 1
 cfg$gms$cm_DTcoup_tol             <- 50         #def <- 50
 cfg$gms$cm_DTcoup_tol_i           <- 50         #def <- 50
 cfg$gms$cm_DTcoup_sIter           <- 1          #def <- 1
+cfg$gms$cm_DTuncoupStoOff         <- 0          #def <- 0
 cfg$gms$cm_CO2TaxSectorMarkup     <- "off"          # def <- "off"
 
 cfg$gms$cm_nucscen                <-  2           #  def  <-  2
@@ -1143,6 +1144,7 @@ cfg$gms$c_BaselineAgriEmiRed <- 0
 # cfg$gms$c_keep_iteration_gdxes <- 1       # def <- 0  keep iteration gdxes
 # cfg$gms$cm_DTcoup_sIter <- 1      # def <- starting iteration for DIETER coupling
 # cfg$gms$c_keep_DTiteration_gdxes <- 1     # def <- 0  keep DIETER iteration gdxes
+# cfg$gms$cm_DTuncoupStoOff <- 0 # def <- 0 turn off storage and curtailment parametrization in uncoupled run
 ############################################################
 # cfg$gms$cm_flex_tax: switch to switch flexibility tax on or off
 # cfg$gms$cm_PriceDurSlope_elh2: slope of price duration curve for electrolysis (increase means more flexibility subsidy for electrolysis H2)
