add peak demand prefactor

--- a/config/default.cfg
+++ b/config/default.cfg
@@ -328,7 +328,7 @@ cfg$gms$cm_DTfc_avg             <- "on"       #def <- "on"
 cfg$gms$cm_DTcurt_avg             <- "on"       #def <- "on"
 cfg$gms$cm_DTdem_avg              <- "off"       #def <- "off"
 cfg$gms$cm_DTcoup_flatco2         <- 25		#def <- 25
-cfg$gms$cm_peakPreFac             <- 1         
+cfg$gms$cm_peakPreFac             <- 1          #def <- 1
 cfg$gms$cm_DTcoup_tol             <- 50         #def <- 50
 cfg$gms$cm_DTcoup_tol_i           <- 50         #def <- 50
 cfg$gms$cm_DTcoup_sIter           <- 1          #def <- 1
